Sun Oct  3 21:16:05 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (TEXT_REGEXP): allow 8-bit characters for the german
	version of Microsoft Exchange Server.

	* lib/net/imap.rb (RTEXT_REGEXP): ditto.

	* lib/net/imap.rb (CTEXT_REGEXP): ditto.

Sat Oct  2 20:34:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (local_vars): moved to struct parser_params.
	  [ruby-dev:24391]

	* parser.y (stmts): remove suspicious NODE_BEGIN.  [ruby-dev:24390]

	* node.h (NEW_DVAR): extra semicolon.

Sat Oct  2 00:42:20 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_sum): should use bignums when bits is greater
	  than or equals to sizeof(long)*CHAR_BITS. [ruby-dev:24395]

	* eval.c (specific_eval): defer pointer retrieval to prevent
	  unsafe sourcefile string modification.  [ruby-dev:24382]

	* string.c (rb_str_sum): wrong cast caused wrong result.
	  [ruby-dev:24385]

	* enum.c (enum_sort_by): hide temporary array from
	  ObjectSpace.each_object.  [ruby-dev:24386]

	* string.c (rb_str_sum): check was done with false pointer.
	  [ruby-dev:24383]

	* string.c (rb_str_sum): string may be altered.  [ruby-dev:24381]

Fri Oct  1 11:40:14 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_eval): defer pointer retrieval to prevent unsafe
	  sourcefile string modification.  [ruby-dev:24373]

	* io.c (io_read): block string buffer modification during
	  rb_io_fread() by freezing it temporarily. [ruby-dev:24366]

	* io.c (rb_io_s_popen): mode argument may be altered.
	  [ruby-dev:24375]

	* file.c (rb_file_s_basename): ext argument may be altered.
	  [ruby-dev:24377]

	* enum.c (enum_sort_by): use NODE instead of 2 element arrays.
	  [ruby-dev:24378]

	* string.c (rb_str_chomp_bang): StringValue() may change the
	  receiver.  [ruby-dev:24371]

Fri Oct  1 11:25:20 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/grid.rb: revive TkGrid.grid

	* ext/tk/lib/tk/pack.rb: revive TkPack.pack
